# arbitrage-opportunity-finder

./: Cargo.toml  Readme.md
src/: config.rs  main.rs
src/structs/: arbitrage_finder.rs  mod.rs  state.rs
src/structs/cex/: binance.rs
src/structs/on_chain/: pyth.rs
