[package]
name = "keyrock-task"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.17.13"
solana-program = "1.17.13"
pyth-sdk-solana = "0.9.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
futures-util = "0.3.29"
futures-channel = "0.3.30"
anyhow = "1.0.76"
serde = "1.0.193"
serde_json = "1.0.108"
clap = { version = "4.4.11", features = ["derive"] }
rust_decimal = "1.33.1"
 